<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/container_poster"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">
                <ImageView
                    android:id="@+id/item_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/container_poster"
                android:layout_toStartOf="@id/container_rating"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:text="@string/dummy_judul_film"/>
            <TextView
                android:id="@+id/item_releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/container_poster"
                android:layout_below="@id/item_title"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_releaseDate"/>
            <TextView
                android:id="@+id/item_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/container_poster"
                android:layout_below="@id/item_releaseDate"
                android:layout_alignParentEnd="true"
                android:maxLines="2"
                android:textStyle="italic"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dummy_loremIpsum"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/container_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_rating"/>
                    <TextView
                        android:id="@+id/item_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dummy_rating"
                        android:layout_marginStart="3dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>