...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.list.tvshow.TvShowListFragment"
    android:id="@+id/tab_tvShow">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
