...
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@id/tabs"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_linkToFavorite"
...
